# ARTI-HRMS-Python

./: .gitignore  CHANGELOG.md  RAG测试文档_人事管理制度.md  README.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  coverage.xml  pyproject.toml  pyrightconfig.json  run.py  start.bat
backend/app/: main.py
backend/app/ai/: nlp_tools.py  token_manager.py
backend/app/ai/agent/: __init__.py  graph.py  nodes.py  state.py  structured_output.py  tools.py
backend/app/ai/chat/: __init__.py  classifier.py  llm_provider.py  memory.py  persona.py  prompts.py  query_enhancer.py  service.py
backend/app/ai/graph_rag/: __init__.py  fusion.py  knowledge_graph.py
backend/app/ai/knowledge/: __init__.py  service.py
backend/app/ai/multimodal/: __init__.py  stt.py  tts.py  vision.py
backend/app/ai/observability/: __init__.py  alerts.py  token_counter.py  tracer.py
backend/app/ai/rag/: __init__.py  models.py  pipeline.py  retriever.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  permissions.py  security.py
backend/app/models/: __init__.py  agent.py  ai_chat.py  approval.py  attendance.py  department.py  employee.py  identity_tag.py  job_position.py  leave_request.py  llm_trace.py  module_scope.py  permission.py  persona.py  role.py  role_permission.py  salary.py  sys_user.py
backend/app/routers/: agent_tasks.py  ai_chat.py  approval_rule_types.py  approval_rules.py  attendance.py  auth.py  config.py  departments.py  dept_permission_templates.py  employees.py  job_positions.py  knowledge_graph.py  leave_requests.py  module_scope_rules.py  multimodal.py  nlp.py  observability.py  permissions.py  persona.py  rag.py  reports.py  role_permissions.py  roles.py  salary_configs.py  salary_records.py  users.py
backend/app/schemas/: __init__.py  agent.py  ai_chat.py  attendance.py  auth.py  common.py  department.py  employee.py  job_position.py  leave_request.py  nlp.py  observability.py  permission.py  persona.py  rag.py  salary.py  user.py
backend/app/services/: agent_task_service.py  attendance_service.py  auth_service.py  department_service.py  employee_service.py  leave_service.py  permission_service.py  report_service.py  salary_service.py  weather_service.py
backend/scripts/: init_postgres.sql
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth_service.py  test_models.py  test_security.py
docker/: docker-compose.dev.yml  docker-compose.yml
